test/tests/stages/18_structures/invalid_parse/extra_credit/union_var_tag_paren.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  struct
  identifier(s)
  {
  int
  identifier(y)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  (
  identifier(s)
  )
  identifier(var)
  ;
  return
  const int(0)
  ;
  }
